--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 <ul class="menu__lst">
                   <li><a href="#cacao">CACAO</a></li>
                   <li><a href="#chocolate">SÔ CÔ LA</a></li>
+                  <li><a href="#process">QUY TRÌNhh</a></li>
                   <li><a href="#products">SẢN PHẨM</a></li>
                   <li><a href="#shops">CỬA HÀNG</a></li>
                   <li><a href="#factory">NHÀ MÁY</a></li>
